<resources>
    <string name="app_name">JE:U</string>
    <string name="nav_open">메뉴 열기</string>
    <string name="nav_close">메뉴 닫기</string>

    <string name="greeting_fmt">%1$s님, 안녕하세요!</string>
    <string name="sample_email">jay@example.com</string>
    <string name="mypage">MY</string>
    <string name="logout">LOGOUT</string>

    <string name="prev_image">이전 이미지</string>
    <string name="next_image">다음 이미지</string>

    <string-array name="search_fields">
        <item>제목</item>
        <item>내용</item>
        <item>작성자</item>
    </string-array>

    <string name="qr_code">탑승권 QR 코드</string>

    <!-- 푸터 -->
    <string name="footer_cs_title">고객지원</string>
    <string name="footer_cs_phone">유선문의 : 02-000-0000</string>

    <string name="footer_cs_email1">jeannehofer@naver.com</string>
    <string name="footer_cs_email2">jingayeon6162@gmail.com</string>
    <string name="footer_cs_email3">edward715@naver.com</string>
    <string name="footer_cs_email4">xmrtn210845@gmail.com</string>
    <string name="footer_cs_email5">eolieu12@naver.com</string>

    <string name="footer_link_shop">SHOP</string>
    <string name="footer_link_review">REVIEW</string>
    <string name="footer_link_community">COMMUNITY</string>
    <string name="footer_link_about">ABOUT</string>
    <string name="footer_link_terms">이용약관</string>
    <string name="footer_link_privacy">개인정보처리방침</string>

    <string name="footer_biz_line1">상호: (주)제유 | 대표자: 조은달빛</string>
    <string name="footer_biz_line2">주소: 서울특별시 서대문구 성산로7길 89-8</string>
    <string name="footer_biz_line3">사업자등록번호: 000-00 | 통신판매업신고: 제2025-서울서대문-00000</string>
    <string name="footer_biz_line4">개인정보관리책임자: 진가연 | 전화: 070-4246-0106</string>

    <string name="footer_terms">이용약관</string>
    <string name="footer_privacy">개인정보처리방침</string>


    <!-- 헤더 -->
    <string name="back">뒤로가기</string>
    <string name="menu">메뉴</string>

</resources>
